--- a/DesktopGlobeNews.vcxproj.filters
+++ b/DesktopGlobeNews.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="Camera.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Sphere.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="default.vert">
@@ -70,9 +73,15 @@
     <ClInclude Include="Camera.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Sphere.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Image Include="..\..\..\Downloads\pfp.jpg">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="barack.jpg">
       <Filter>Resource Files</Filter>
     </Image>
   </ItemGroup>
