--- a/DesktopGlobeNews.vcxproj
+++ b/DesktopGlobeNews.vcxproj
@@ -104,7 +104,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\Users\youri\Documents\GlobeCppProject\DesktopGlobeNews\includes</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\Zingiez\source\repos\DesktopGlobeNews\includes</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -120,6 +120,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>C:\Users\Zingiez\source\repos\DesktopGlobeNews\includes</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -154,7 +155,7 @@
   </ItemGroup>
   <ItemGroup>
     <Image Include="..\..\..\Downloads\pfp.jpg" />
-    <Image Include="barack.jpg" />
+    <Image Include="earth.jpg" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
