The sphere now rotates naturally. Albeit, without consideration of the monitors refresh rate. Next step is to integrate a static camera when not debugging and the ability to click on the globe to get News information from a continent.

--- a/DesktopGlobeNews.vcxproj
+++ b/DesktopGlobeNews.vcxproj
@@ -156,6 +156,8 @@
   <ItemGroup>
     <Image Include="..\..\..\Downloads\pfp.jpg" />
     <Image Include="earth.jpg" />
+    <Image Include="newEarth.jpg" />
+    <Image Include="obamman.jpg" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
