--- a/DesktopGlobeNews.vcxproj.filters
+++ b/DesktopGlobeNews.vcxproj.filters
@@ -87,5 +87,11 @@
     <Image Include="earth.jpg">
       <Filter>Resource Files\Textures</Filter>
     </Image>
+    <Image Include="obamman.jpg">
+      <Filter>Resource Files\Textures</Filter>
+    </Image>
+    <Image Include="newEarth.jpg">
+      <Filter>Resource Files\Textures</Filter>
+    </Image>
   </ItemGroup>
 </Project>
