--- a/DesktopGlobeNews.vcxproj.filters
+++ b/DesktopGlobeNews.vcxproj.filters
@@ -93,5 +93,8 @@
     <Image Include="newEarth.jpg">
       <Filter>Resource Files\Textures</Filter>
     </Image>
+    <Image Include="ColoredRegions.jpg">
+      <Filter>Resource Files\Textures</Filter>
+    </Image>
   </ItemGroup>
 </Project>
