--- a/DesktopGlobeNews.vcxproj.filters
+++ b/DesktopGlobeNews.vcxproj.filters
@@ -19,6 +19,9 @@
     <Filter Include="Resource Files\Textures">
       <UniqueIdentifier>{2700e1ef-a9a7-4933-b745-dcaa25e2f72c}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Resource Files\Config">
+      <UniqueIdentifier>{590d940b-460e-42ad-b911-fbf96b3b2ede}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -62,6 +65,9 @@
     <None Include="default.frag">
       <Filter>Resource Files\Shaders</Filter>
     </None>
+    <None Include="color_input.frag">
+      <Filter>Resource Files\Shaders</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="shaderClass.h">
@@ -93,20 +99,16 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <Image Include="..\..\..\Downloads\pfp.jpg">
-      <Filter>Resource Files\Textures</Filter>
-    </Image>
-    <Image Include="earth.jpg">
-      <Filter>Resource Files\Textures</Filter>
-    </Image>
-    <Image Include="obamman.jpg">
-      <Filter>Resource Files\Textures</Filter>
-    </Image>
     <Image Include="newEarth.jpg">
       <Filter>Resource Files\Textures</Filter>
     </Image>
     <Image Include="ColoredRegions.jpg">
       <Filter>Resource Files\Textures</Filter>
     </Image>
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="config.txt">
+      <Filter>Resource Files\Config</Filter>
+    </Text>
   </ItemGroup>
 </Project>
